# automl-project

./: .env.local.example  .gitignore  LICENSE  README.md  download_datasets.py  environment.yml  pyproject.toml  run.py
.github/workflows/: ci.yml
configs/: backbone_costs.yaml  budget.yaml  search_space.yaml  vram_table.yaml
configs/best_configs/: default.yaml
configs/datasets/: emotions.yaml  fashion.yaml  flowers.yaml  skin_cancer.yaml
docs/: 00_SCOPE_AND_DECISIONS.md  01_ARCHITECTURE_AND_INTERFACES.md  02_BUILD_ORDER.md  03_MEMBER_A_DATA_AND_TRAINING.md  04_MEMBER_B_SEARCH.md  05_MEMBER_C_META_MO_ANALYSIS.md  06_INFRASTRUCTURE.md  07_EXPERIMENT_PROTOCOL.md  08_INTEGRATION_FREEZE_AND_PHASE_II.md  09_AGENT_INSTRUCTIONS.md  10_LIVING_DOC_TEMPLATES.md  README.md
docs_repo/: BENCHMARK_STATUS.md  CONTRIBUTIONS.md  DATA_CHECKSUMS.md  DATA_FORMAT.md  DECISION_LOG.md  ENV_CHECK.md  EXPERIMENTS.md  GPU_QUEUE.md  LEDGER.md  RUNSTORE_SCHEMA.md  SUBMISSIONS.md
scripts/: build_portfolio.py  make_figures.py  measure_vram.py  run_automl.py  run_baseline.py  train_config.py
src/automl/: automl.py  datasets.py
src/automl_image/: pipeline.py  runstore.py  types.py
src/automl_image/analysis/: ablation.py  fanova.py  ledger.py  stats.py
src/automl_image/data/: ingest.py  metafeatures.py  probe.py  splits.py
src/automl_image/objectives/: cost.py  pareto.py
tests/: test_evaluate_config.py  test_imports.py  test_pareto.py  test_runstore.py  test_space.py  test_splits.py  test_submission_format.py  test_types.py  test_warm_start.py
tests/fixtures/: make_fake_dataset.py
(+14 files in other folders)
